--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  quran: 
+    path: ./quran-1.2.2  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
