--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
     sdk: flutter
   quran: 
     path: ./quran-1.2.2  
-
+  string_validator: 
+  easy_container: 
+  wakelock: 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -61,9 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/json/surahs.json
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -81,6 +83,9 @@ flutter:
     - family: QCF_P001
       fonts:
         - asset: assets\fonts\QCF2BSMLfonts\QCF2001.TTF
+    - family: uthmanic
+      fonts:
+        - asset: assets\fonts\QCF2BSMLfonts\UthmanTN1 Ver10.otf
 
     - family: QCF_P002
       fonts:
