--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  flutter_screenutil:
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -79,7 +80,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  
+    - family: arsura
+      fonts:
+        - asset: assets\fonts\arsura.ttf
     - family: QCF_P001
       fonts:
         - asset: assets\fonts\QCF2BSMLfonts\QCF2001.TTF
